# fhgr_rc

./: .gitignore  .gitmodules  Cargo.toml  do.sh
_notes/: notes.txt
car_esp32/: .gitignore
car_stm32/: Cargo.toml  Embed.toml  memory.x
car_stm32/.cargo/: config.toml
car_stm32/src/: main.rs
remote_esp32/: Cargo.toml
remote_esp32/src/: index.html  main.rs
