[package]
name = "car_stm32"
version = "0.1.0"
edition = "2021"

[dependencies]
# cortex-m = { version = "0.7",  features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0.0"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f401"] }
nb = "1.1.0"
rtt-target = "0.6.1"

# Motor driver
tb6612fng = "1.0.0"

[profile.release]
codegen-units = 1
debug = true
lto = true