[package]
name = "remote_esp32"
version = "0.1.0"
authors = ["Fritz 179 <fabrizio.cortesi179@gmail.com>"]
edition = "2021"

[dependencies]
esp-hal = { version = "0.22.0", features = ["esp32"] }
esp-backtrace = { version = "0.14.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.12.0", features = ["esp32"] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
