[package]
name = "remote_esp32"
version = "0.1.0"
authors = ["Fritz 179 <fabrizio.cortesi179@gmail.com>"]
edition = "2021"

[dependencies]
embedded-svc = "0.28.1"
esp-idf-sys = "0.36.1"
esp-idf-svc = "0.50.1"
esp-idf-hal = "0.45.1"
log = "0.4"
anyhow = "1.0.95"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
